# bigsetcover

./: .gitignore  CMakeLists.txt  README.md  setcover.cpp
dbs/: CMakeLists.txt  README.md  dbs.cpp
dbs/include/dbs/: config.h
dbs/include/dbs/details/: dbs_details.h  dbs_details.inl
